--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,15 @@
 .Rhistory
 .RData
 .Ruserdata
+*_cache/
+*_files/
+.Rproj.user/
+*.html
+*.pdf
+*.png
+*.jpg
+*.jpeg
+*.csv
+*.json
+*.zip
+.DS_Store
